Deleted old files, changed index

--- a/index.html
+++ b/index.html
@@ -182,25 +182,12 @@
 								pulvinar curabitur morbi convallis. Lectus malesuada sed fermentum dolore amet.
 							</p>
 						</header>
-						<p>
-							Commodo id natoque malesuada sollicitudin elit suscipit. Curae suspendisse mauris posuere accumsan massa
-							posuere lacus convallis tellus interdum. Amet nullam fringilla nibh nulla convallis ut venenatis purus
-							sit arcu sociis. Nunc fermentum adipiscing tempor cursus nascetur adipiscing adipiscing. Primis aliquam
-							mus lacinia lobortis phasellus suscipit. Fermentum lobortis non tristique ante proin sociis accumsan
-							lobortis. Auctor etiam porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum
-							consequat integer interdum integer purus sapien. Nibh eleifend nulla nascetur pharetra commodo mi augue
-							interdum tellus. Ornare cursus augue feugiat sodales velit lorem. Semper elementum ullamcorper lacinia
-							natoque aenean scelerisque.
-						</p>
-						<footer>
-							<a href="#" class="button">Continue Reading</a>
-						</footer>
 					</article>
 
 				</div>
 
 			<!-- Features -->
-				<div class="wrapper style1">
+<!--				<div class="wrapper style1">
 
 					<section id="features" class="container special">
 						<header>
@@ -241,14 +228,14 @@
 						</div>
 					</section>
 
-				</div>
+				</div> -->
 
 			<!-- Footer -->
 				<div id="footer">
 					<div class="container">
-						<div class="row">
+					<!--	<div class="row">
 
-							<!-- Tweets -->
+							 Tweets 
 								<section class="4u 12u(mobile)">
 									<header>
 										<h2 class="icon fa-twitter circled"><span class="label">Tweets</span></h2>
@@ -281,7 +268,7 @@
 									</ul>
 								</section>
 
-							<!-- Posts -->
+							 Posts 
 								<section class="4u 12u(mobile)">
 									<header>
 										<h2 class="icon fa-file circled"><span class="label">Posts</span></h2>
@@ -322,7 +309,7 @@
 									</ul>
 								</section>
 
-							<!-- Photos -->
+							 Photos 
 								<section class="4u 12u(mobile)">
 									<header>
 										<h2 class="icon fa-camera circled"><span class="label">Photos</span></h2>
@@ -352,7 +339,7 @@
 						</div>
 						<hr />
 						<div class="row">
-							<div class="12u">
+							<div class="12u"> -->
 
 								<!-- Contact -->
 									<section class="contact">
@@ -361,11 +348,8 @@
 										</header>
 										<p>Urna nisl non quis interdum mus ornare ridiculus egestas ridiculus lobortis vivamus tempor aliquet.</p>
 										<ul class="icons">
-											<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 											<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 											<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-											<li><a href="#" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>
-											<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
 											<li><a href="#" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 										</ul>
 									</section>
@@ -373,7 +357,7 @@
 								<!-- Copyright -->
 									<div class="copyright">
 										<ul class="menu">
-											<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+											<li>&copy; PCCOE ACM Student Chapter</li><li>Design: Mehul Solanki, Aditya Khadse</li>
 										</ul>
 									</div>
 
