--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
+
+
 	<body class="homepage">
 		<div id="page-wrapper">
 
@@ -37,18 +39,18 @@
 								<li>
 									<a href="#events" class='scrolly'>Events</a>
 									<ul>
-										<li><a href="events/beatthebits.html">Beat the Bits!</a></li>
-										<li><a href="events/teproj.html">TE Project Exhibition</a></li>
-										<li><a href="events/bepaper.html">BE Paper Presentation</a></li>
-										<li><a href="events/speak.html">Speakout Loud</a></li>
-										<li><a href="events/dash.html">Challenge Dash</a></li>
-										<li><a href="events/shotin90.html">Shot in 90</a></li>
-										<li><a href="events/quiz.html">Quiz-O-Phile</a></li>
-										<li><a href="events/checkmate.html">Checkmate</a></li>
-										<li><a href="events/theatreart.html">Theatre Art</a></li>
-										<li><a href="events/knowledge.html">Knowledge Dissemination</a></li>
-										<li><a href="events/codesprint.html">CodeSprint</a></li>
-										<li><a href="events/sih2017.html">Smart India Hackathon 2017 Exhibiton</a></li>
+										<li><a href="beatthebits.html">Beat the Bits!</a></li>
+										<li><a href="teproj.html">TE Project Exhibition</a></li>
+										<li><a href="bepaper.html">BE Paper Presentation</a></li>
+										<li><a href="speakout.html">Speakout Loud</a></li>
+										<li><a href="dash.html">Challenge Dash</a></li>
+										<li><a href="shotin90.html">Shot in 90</a></li>
+										<li><a href="quiz.html">Quiz-O-Phile</a></li>
+										<li><a href="checkmate.html">Checkmate</a></li>
+										<li><a href="theatreart.html">Theatre Art</a></li>
+										<li><a href="knowledge.html">Knowledge Dissemination</a></li>
+										<li><a href="codesprint.html">CodeSprint</a></li>
+										<li><a href="sih2017.html">Smart India Hackathon 2017 Exhibiton</a></li>
 									</ul>
 								</li>
 								<li><a href="media/schedule.pdf">Schedule</a></li>
@@ -72,97 +74,97 @@
 					<div class="reel">
 
 						<article>
-							<a href="events/beatthebits.html" class="image featured"><img src="images/beatthebits.jpg" alt="" /></a>
+							<a href="beatthebits.html" class="image featured"><img src="images/beatthebits.jpg" alt="" /></a>
 							<header>
-								<h3><a href="events/beatthebits.html">Beat the Bits!</a></h3>
+								<h3><a href="beatthebits.html">Beat the Bits!</a></h3>
 							</header>
 							<p>Unleash the coder in you</p>
 						</article>
 
 						<article>
-							<a href="events/teproj.html" class="image featured"><img src="images/teproj.jpg" alt="" /></a>
+							<a href="teproj.html" class="image featured"><img src="images/teproj.jpg" alt="" /></a>
 							<header>
-								<h3><a href="events/teproj.html">TE Mini Project Exhibition</a></h3>
+								<h3><a href="teproj.html">TE Mini Project Exhibition</a></h3>
 							</header>
 							<p>Showcase developed projects</p>
 						</article>
 
 						<article>
-							<a href="events/bepaper.html" class="image featured"><img src="images/bepaper.jpg" alt="" /></a>
+							<a href="bepaper.html" class="image featured"><img src="images/bepaper.jpg" alt="" /></a>
 							<header>
-								<h3><a href="events/bepaper.html">BE Paper Presentation</a></h3>
+								<h3><a href="bepaper.html">BE Paper Presentation</a></h3>
 							</header>
 							<p>Present your paper in a pragmatic manner</p>
 						</article>
 
 						<article>
-							<a href="events/speakout.html" class="image featured"><img src="images/speakout.jpg" alt="" /></a>
+							<a href="speakout.html" class="image featured"><img src="images/speakout.jpg" alt="" /></a>
 							<header>
-								<h3><a href="events/speakout.html">Speakout Loud</a></h3>
+								<h3><a href="speakout.html">Speakout Loud</a></h3>
 							</header>
 							<p>Speak in front of a large crowd and prove yourself</p>
 						</article>
 
 						<article>
-							<a href="events/dash.html" class="image featured"><img src="images/dash.jpg" alt="" /></a>
+							<a href="dash.html" class="image featured"><img src="images/dash.jpg" alt="" /></a>
 							<header>
-								<h3><a href="events/dash.html">Challenge Dash</a></h3>
+								<h3><a href="dash.html">Challenge Dash</a></h3>
 							</header>
 							<p>Work as a team against time!</p>
 						</article>
 
 						<article>
-							<a href="events/shotin90.html" class="image featured"><img src="images/shotin90.jpg" alt="" /></a>
+							<a href="shotin90.html" class="image featured"><img src="images/shotin90.jpg" alt="" /></a>
 							<header>
-								<h3><a href="events/shotin90.html">Shot in 90</a></h3>
+								<h3><a href="shotin90.html">Shot in 90</a></h3>
 							</header>
 							<p>Explain concepts through video</p>
 						</article>
 
 						<article>
-							<a href="events/quiz.html" class="image featured"><img src="images/quiz.jpg" alt="" /></a>
+							<a href="quiz.html" class="image featured"><img src="images/quiz.jpg" alt="" /></a>
 							<header>
-								<h3><a href="events/quiz.html">Quiz-O-Phile</a></h3>
+								<h3><a href="quiz.html">Quiz-O-Phile</a></h3>
 							</header>
 							<p>Love quizzes? Then this is the event for you!</p>
 						</article>
 
 						<article>
-							<a href="events/checkmate.html" class="image featured"><img src="images/checkmate.jpg" alt="" /></a>
+							<a href="checkmate.html" class="image featured"><img src="images/checkmate.jpg" alt="" /></a>
 							<header>
-								<h3><a href="events/checkmate.html">Checkmate</a></h3>
+								<h3><a href="checkmate.html">Checkmate</a></h3>
 							</header>
 							<p>Only the brightest will win in this 1v1 Chess Tournament</p>
 						</article>
 
 						<article>
-							<a href="events/theatreart.html" class="image featured"><img src="images/theatreart.jpg" alt="" /></a>
+							<a href="theatreart.html" class="image featured"><img src="images/theatreart.jpg" alt="" /></a>
 							<header>
-								<h3><a href="events/theatreart.html">Theatre Art</a></h3>
+								<h3><a href="theatreart.html">Theatre Art</a></h3>
 							</header>
 							<p>A true artist can make difficult ideas simple</p>
 						</article>
 
 						<article>
-							<a href="events/knowledge.html" class="image featured"><img src="images/knowledge.jpg" alt="" /></a>
+							<a href="knowledge.html" class="image featured"><img src="images/knowledge.jpg" alt="" /></a>
 							<header>
-								<h3><a href="events/knowledge.html">Knowledge Dissemination</a></h3>
+								<h3><a href="knowledge.html">Knowledge Dissemination</a></h3>
 							</header>
 							<p>Decreasing social distances by sharing knowledge</p>
 						</article>
 						
 						<article>
-							<a href="events/codesprint.html" class="image featured"><img src="images/codesprint.jpg" alt="" /></a>
+							<a href="codesprint.html" class="image featured"><img src="images/codesprint.jpg" alt="" /></a>
 							<header>
-								<h3><a href="events/codesprint.html">CodeSprint</a></h3>
+								<h3><a href="codesprint.html">CodeSprint</a></h3>
 							</header>
 							<p>Develop an App</p>
 						</article>
 						
 						<article>
-							<a href="events/sih2017.html" class="image featured"><img src="images/sih2017.jpg" alt="" /></a>
+							<a href="sih2017.html" class="image featured"><img src="images/sih2017.jpg" alt="" /></a>
 							<header>
-								<h3><a href="events/sih2017.html">Smart India Hackathon 2017</a></h3>
+								<h3><a href="sih2017.html">Smart India Hackathon 2017</a></h3>
 							</header>
 							<p>Participating teams of Smart India Hackathon 2017 show their implementations for others to draw inspiration from</p>
 						</article>
@@ -176,10 +178,9 @@
 					<article id="main" class="container special">
 						<a href="#" class="image featured"><img src="images/anantya-main.png" alt="" /></a>
 						<header>
-							<h2><a href="#">Sed massa imperdiet magnis</a></h2>
+							<h2><a href="#"></a></h2>
 							<p>
-								Sociis aenean eu aenean mollis mollis facilisis primis ornare penatibus aenean. Cursus ac enim
-								pulvinar curabitur morbi convallis. Lectus malesuada sed fermentum dolore amet.
+								Get ready for the most awaited technical event!
 							</p>
 						</header>
 					</article>
@@ -349,8 +350,8 @@
 										<p>Abhiskek Gaikwad : 9405847376 &emsp; | &emsp;
 										 	Neha Waghchaure : 7719804030</p>
 										<ul class="icons">
-											<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-											<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+											<li><a href="https://fb.me/pccoe.acm" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+											<li><a href="https://www.instagram.com/pccoeacm/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 										<!--	<li><a href="#" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li> -->
 										</ul>
 									</section>
