--- a/quiz.html
+++ b/quiz.html
@@ -1,12 +1,9 @@
 <!DOCTYPE HTML>
-<!--
-	Helios by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
+
 <html>
 	<head>
-		<title>Left Sidebar - Helios by HTML5 UP</title>
+		<title>Anantya 2k17</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -22,11 +19,13 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1><a href="index.html" id="logo">Helios</a></h1>
+								<h1><a href="#" id="logo">Quiz-O-Phile</a></h1>
 							</header>
 						</div>
 
 					<!-- Nav -->
+
+					<!--
 						<nav id="nav">
 							<ul>
 								<li><a href="index.html">Home</a></li>
@@ -53,6 +52,7 @@
 								<li><a href="no-sidebar.html">No Sidebar</a></li>
 							</ul>
 						</nav>
+					-->
 
 				</div>
 
@@ -62,7 +62,9 @@
 					<div class="container">
 						<div class="row 200%">
 							<div class="4u 12u(mobile)" id="sidebar">
+								<!--
 								<hr class="first" />
+
 								<section>
 									<header>
 										<h3><a href="#">Accumsan sed penatibus</a></h3>
@@ -76,94 +78,174 @@
 										<a href="#" class="button">Learn More</a>
 									</footer>
 								</section>
+
 								<hr />
+								-->
 								<section>
 									<header>
-										<h3><a href="#">Sed lorem etiam consequat</a></h3>
+										<h3><a href="#">Evevnts at a glance</a></h3>
 									</header>
 									<p>
-										Tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
+										<br>
 									</p>
+
 									<div class="row 50%">
 										<div class="4u">
-											<a href="#" class="image fit"><img src="images/pic10.jpg" alt="" /></a>
+											<a href="beatthebits.html" class="image fit"><img src="images/beatthebits.jpg" alt="" /></a>
 										</div>
 										<div class="8u">
-											<h4>Nibh sed cubilia</h4>
+											<h4><a href="beatthebits.html">Beat the bits!</a></h4>
 											<p>
-												Amet nullam fringilla nibh nulla convallis tique ante proin.
+												Unleash the coder in you
 											</p>
 										</div>
 									</div>
 									<div class="row 50%">
 										<div class="4u">
-											<a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a>
+											<a href="teproj.html" class="image fit"><img src="images/teproj.jpg" alt="" /></a>
 										</div>
 										<div class="8u">
-											<h4>Proin sed adipiscing</h4>
+											<h4><a href="teproj.html">TE Mini Project Exhibition</a></h4>
 											<p>
-												Amet nullam fringilla nibh nulla convallis tique ante proin.
+												Showcase your developed projects
 											</p>
 										</div>
 									</div>
 									<div class="row 50%">
 										<div class="4u">
-											<a href="#" class="image fit"><img src="images/pic12.jpg" alt="" /></a>
+											<a href="bepaper.html" class="image fit"><img src="images/bepaper.jpg" alt="" /></a>
 										</div>
 										<div class="8u">
-											<h4>Lorem feugiat magna</h4>
+											<h4><a href="bepaper.html">BE Paper Presentation</a></h4>
 											<p>
-												Amet nullam fringilla nibh nulla convallis tique ante proin.
+												Present you paper in pragmatic manner
 											</p>
 										</div>
 									</div>
 									<div class="row 50%">
 										<div class="4u">
-											<a href="#" class="image fit"><img src="images/pic13.jpg" alt="" /></a>
+											<a href="speakout.html" class="image fit"><img src="images/speakout.jpg" alt="" /></a>
 										</div>
 										<div class="8u">
-											<h4>Sed tempus fringilla</h4>
+											<h4><a href="speakout.html">Speakout Loud</a></h4>
 											<p>
-												Amet nullam fringilla nibh nulla convallis tique ante proin.
+												Speak in front of a large crowd and prove yourself
 											</p>
 										</div>
 									</div>
 									<div class="row 50% no-collapse">
 										<div class="4u">
-											<a href="#" class="image fit"><img src="images/pic14.jpg" alt="" /></a>
+											<a href="dash.html" class="image fit"><img src="images/dash.jpg" alt="" /></a>
 										</div>
 										<div class="8u">
-											<h4>Malesuada fermentum</h4>
+											<h4><a href="dash.html">Challenge Dash</a></h4>
 											<p>
-												Amet nullam fringilla nibh nulla convallis tique ante proin.
+												Work as a team, against time!
 											</p>
 										</div>
 									</div>
+
+									<div class="row 50%">
+										<div class="4u">
+											<a href="shotin90.html" class="image fit"><img src="images/shotin90.jpg" alt="" /></a>
+										</div>
+										<div class="8u">
+											<h4><a href="shotin90.html">Shot in 90</a></h4>
+											<p>
+												Explain concepts through videos
+											</p>
+										</div>
+									</div>
+									<div class="row 50%">
+										<div class="4u">
+											<a href="quiz.html" class="image fit"><img src="images/quiz.jpg" alt="" /></a>
+										</div>
+										<div class="8u">
+											<h4><a href="quiz.html">Quiz-O-Phile</a></h4>
+											<p>
+												Show you love for quizzes
+											</p>
+										</div>
+									</div>
+									<div class="row 50%">
+										<div class="4u">
+											<a href="checkmate.html" class="image fit"><img src="images/checkmate.jpg" alt="" /></a>
+										</div>
+										<div class="8u">
+											<h4><a href="checkmate.html">Checkmate</a></h4>
+											<p>
+												Only the brightest will win
+											</p>
+										</div>
+									</div>
+									<div class="row 50%">
+										<div class="4u">
+											<a href="theatreart.html" class="image fit"><img src="images/theatreart.jpg" alt="" /></a>
+										</div>
+										<div class="8u">
+											<h4><a href="theatreart.html">Theatre Art</a></h4>
+											<p>
+												How much of an artist are you?
+											</p>
+										</div>
+									</div>
+									<div class="row 50% no-collapse">
+										<div class="4u">
+											<a href="knowledge.html" class="image fit"><img src="images/knowledge.jpg" alt="" /></a>
+										</div>
+										<div class="8u">
+											<h4><a href="knowledge.html">Knowledge Dissemination</a></h4>
+											<p>
+												Decreasing social distances by sharing knowledge
+											</p>
+										</div>
+									</div>
+									<div class="row 50%">
+										<div class="4u">
+											<a href="codesprint.html" class="image fit"><img src="images/pic13.jpg" alt="" /></a>
+										</div>
+										<div class="8u">
+											<h4><a href="codesprint.html">CodeSprint</a></h4>
+											<p>
+												Develop an App
+											</p>
+										</div>
+									</div>
+									<div class="row 50% no-collapse">
+										<div class="4u">
+											<a href="hackathon.html" class="image fit"><img src="images/pic14.jpg" alt="" /></a>
+										</div>
+										<div class="8u">
+											<h4><a href="hackathon.html">Smart India Hackathon</a></h4>
+											<p>
+												Participating teams of Smart India Hackathon 2017 show their implementations for others to draw inspiration from
+											</p>
+										</div>
+									</div>
+
+									<!--
 									<footer>
 										<a href="#" class="button">Magna Adipiscing</a>
 									</footer>
+									-->
 								</section>
 							</div>
 							<div class="8u 12u(mobile) important(mobile)" id="content">
 								<article id="main">
 									<header>
-										<h2><a href="#">Left Sidebar</a></h2>
+										<h3><a href="#">Event Details</a></h3>
+
 										<p>
-											Morbi convallis lectus malesuada sed fermentum dolore amet
+											
 										</p>
 									</header>
-									<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+								<!--	<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a> -->
 									<p>
-										Commodo id natoque malesuada sollicitudin elit suscipit. Curae suspendisse mauris posuere accumsan massa
-										posuere lacus convallis tellus interdum. Amet nullam fringilla nibh nulla convallis ut venenatis purus
-										lobortis. Auctor etiam porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum
-										consequat integer interdum integer purus sapien. Nibh eleifend nulla nascetur pharetra commodo mi augue
-										interdum tellus. Ornare cursus augue feugiat sodales velit lorem. Semper elementum ullamcorper lacinia
-										natoque aenean scelerisque vel lacinia mollis quam sodales congue.
+										Event Description
 									</p>
 									<section>
 										<header>
-											<h3>Ultrices tempor sagittis nisl</h3>
+											<h3>Rules</h3>
 										</header>
 										<p>
 											Nascetur volutpat nibh ullamcorper vivamus at purus. Cursus ultrices porttitor sollicitudin imperdiet
@@ -178,6 +260,8 @@
 											ut penatibus fermentum nibh erat malesuada varius.
 										</p>
 									</section>
+
+									<!--	
 									<section>
 										<header>
 											<h3>Augue euismod feugiat tempus</h3>
@@ -189,10 +273,16 @@
 											egestas odio nisl duis sociis purus faucibus morbi. Eget massa mus etiam sociis pharetra magna.
 										</p>
 									</section>
+									-->
+
 								</article>
 							</div>
 						</div>
 						<hr />
+
+
+
+						<!--
 						<div class="row">
 							<article class="4u 12u(mobile) special">
 								<a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
@@ -225,145 +315,35 @@
 								</p>
 							</article>
 						</div>
+
+						-->
 					</div>
 
 				</div>
 
 			<!-- Footer -->
+				
+
 				<div id="footer">
 					<div class="container">
-						<div class="row">
 
-							<!-- Tweets -->
-								<section class="4u 12u(mobile)">
-									<header>
-										<h2 class="icon fa-twitter circled"><span class="label">Tweets</span></h2>
-									</header>
-									<ul class="divided">
-										<li>
-											<article class="tweet">
-												Amet nullam fringilla nibh nulla convallis tique ante sociis accumsan.
-												<span class="timestamp">5 minutes ago</span>
-											</article>
-										</li>
-										<li>
-											<article class="tweet">
-												Hendrerit rutrum quisque.
-												<span class="timestamp">30 minutes ago</span>
-											</article>
-										</li>
-										<li>
-											<article class="tweet">
-												Curabitur donec nulla massa laoreet nibh. Lorem praesent montes.
-												<span class="timestamp">3 hours ago</span>
-											</article>
-										</li>
-										<li>
-											<article class="tweet">
-												Lacus natoque cras rhoncus curae dignissim ultricies. Convallis orci aliquet.
-												<span class="timestamp">5 hours ago</span>
-											</article>
-										</li>
-									</ul>
-								</section>
-
-							<!-- Posts -->
-								<section class="4u 12u(mobile)">
-									<header>
-										<h2 class="icon fa-file circled"><span class="label">Posts</span></h2>
-									</header>
-									<ul class="divided">
-										<li>
-											<article class="post stub">
-												<header>
-													<h3><a href="#">Nisl fermentum integer</a></h3>
-												</header>
-												<span class="timestamp">3 hours ago</span>
-											</article>
-										</li>
-										<li>
-											<article class="post stub">
-												<header>
-													<h3><a href="#">Phasellus portitor lorem</a></h3>
-												</header>
-												<span class="timestamp">6 hours ago</span>
-											</article>
-										</li>
-										<li>
-											<article class="post stub">
-												<header>
-													<h3><a href="#">Magna tempus consequat</a></h3>
-												</header>
-												<span class="timestamp">Yesterday</span>
-											</article>
-										</li>
-										<li>
-											<article class="post stub">
-												<header>
-													<h3><a href="#">Feugiat lorem ipsum</a></h3>
-												</header>
-												<span class="timestamp">2 days ago</span>
-											</article>
-										</li>
-									</ul>
-								</section>
-
-							<!-- Photos -->
-								<section class="4u 12u(mobile)">
-									<header>
-										<h2 class="icon fa-camera circled"><span class="label">Photos</span></h2>
-									</header>
-									<div class="row 25% no-collapse">
-										<div class="6u">
-											<a href="#" class="image fit"><img src="images/pic10.jpg" alt="" /></a>
-										</div>
-										<div class="6u">
-											<a href="#" class="image fit"><img src="images/pic11.jpg" alt="" /></a>
-										</div>
-									</div>
-									<div class="row 25% no-collapse">
-										<div class="6u">
-											<a href="#" class="image fit"><img src="images/pic12.jpg" alt="" /></a>
-										</div>
-										<div class="6u">
-											<a href="#" class="image fit"><img src="images/pic13.jpg" alt="" /></a>
-										</div>
-									</div>
-									<div class="row 25% no-collapse">
-										<div class="6u">
-											<a href="#" class="image fit"><img src="images/pic14.jpg" alt="" /></a>
-										</div>
-										<div class="6u">
-											<a href="#" class="image fit"><img src="images/pic15.jpg" alt="" /></a>
-										</div>
-									</div>
-								</section>
-
-						</div>
-						<hr />
-						<div class="row">
-							<div class="12u">
-
-								<!-- Contact -->
-									<section class="contact">
+										<section class="contact">
 										<header>
-											<h3>Nisl turpis nascetur interdum?</h3>
+											<h3>Follow Us</h3>
 										</header>
-										<p>Urna nisl non quis interdum mus ornare ridiculus egestas ridiculus lobortis vivamus tempor aliquet.</p>
+										<p>Abhiskek Gaikwad : 9405847376 &emsp; | &emsp;
+										 	Neha Waghchaure : 7719804030</p>
 										<ul class="icons">
-											<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-											<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-											<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-											<li><a href="#" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>
-											<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-											<li><a href="#" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+											<li><a href="https://fb.me/pccoe.acm" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+											<li><a href="https://www.instagram.com/pccoeacm/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+										<!--	<li><a href="#" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li> -->
 										</ul>
 									</section>
 
 								<!-- Copyright -->
 									<div class="copyright">
 										<ul class="menu">
-											<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+											<li>&copy; PCCOE ACM Student Chapter</li><li>Design: Mehul Solanki, Aditya Khadse</li>
 										</ul>
 									</div>
 
