Event details / rules added

--- a/knowledge.html
+++ b/knowledge.html
@@ -83,7 +83,7 @@
 								-->
 								<section>
 									<header>
-										<h3><a href="#">Evevnts at a glance</a></h3>
+										<h3><a href="#">Events at a glance</a></h3>
 									</header>
 									<p>
 										<br>
@@ -241,23 +241,38 @@
 									</header>
 								<!--	<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a> -->
 									<p>
-										Event Description
+										<strong>Objective:</strong> To address a social issue and contribute towards solving it by proposing a unique solution through partial/full implementation.
 									</p>
 									<section>
 										<header>
 											<h3>Rules</h3>
 										</header>
 										<p>
-											Nascetur volutpat nibh ullamcorper vivamus at purus. Cursus ultrices porttitor sollicitudin imperdiet
-											at pretium tellus in euismod a integer sodales neque. Nibh quis dui quis mattis eget imperdiet venenatis
-											feugiat. Neque primis ligula cum erat aenean tristique luctus risus ipsum praesent iaculis. Fermentum elit
-											fringilla consequat dis arcu. Pellentesque mus tempor vitae pretium sodales porttitor lacus. Phasellus
-											egestas odio nisl duis sociis purus faucibus morbi. Eget massa mus etiam sociis pharetra magna.
-										</p>
-										<p>
-											Eleifend auctor turpis magnis sed porta nisl pretium. Aenean suspendisse nulla eget sed etiam parturient
-											orci cursus nibh. Quisque eu nec neque felis laoreet diam morbi egestas. Dignissim cras rutrum consectetur
-											ut penatibus fermentum nibh erat malesuada varius.
+											(Organised by NSS and ISR cells)<br><br>
+
+											•	Each group needs to identify any Social Issue/Problem and Propose an appropriate Solution for the same. <br>
+											•	Partial/Full Implemention of Solution is expected <br>
+											•	For contest Presentation needs to be given through Short Video / PPT  / a Small Working Model.<br>
+											•	Video should be minimum 1 min and maximum 3 mins.<br><br>
+
+											Total Rounds: 1<br><br>
+
+											Place : 204.<br><br>
+
+											<strong>Timings:</strong> 10 AM onwards.<br><br>
+
+
+											<strong>TEAM AND FEE STRUCTURE:</strong> <br><br>
+											Team size:  Max 4 participants<br><br>
+											Registration fee: ₹50/Group<br><br>
+
+											<strong>Coordinators:</strong> <br><br>
+											Rutuja Mahadik 8237653131<br><br>
+											Vikrant Wyawahare 8605929236<br><br>
+
+
+											
+
 										</p>
 									</section>
 
