--- a/teproj.html
+++ b/teproj.html
@@ -83,7 +83,7 @@
 								-->
 								<section>
 									<header>
-										<h3><a href="#">Evevnts at a glance</a></h3>
+										<h3><a href="#">Events at a glance</a></h3>
 									</header>
 									<p>
 										<br>
@@ -241,23 +241,31 @@
 									</header>
 								<!--	<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a> -->
 									<p>
-										Event Description
+										<strong>Objective: </strong>To help the TE students bring forward their Software Development Lab or Database Management System or Computer Network projects and help them learn about the scope of improvement if any, for their projects.
 									</p>
 									<section>
 										<header>
 											<h3>Rules</h3>
 										</header>
 										<p>
-											Nascetur volutpat nibh ullamcorper vivamus at purus. Cursus ultrices porttitor sollicitudin imperdiet
-											at pretium tellus in euismod a integer sodales neque. Nibh quis dui quis mattis eget imperdiet venenatis
-											feugiat. Neque primis ligula cum erat aenean tristique luctus risus ipsum praesent iaculis. Fermentum elit
-											fringilla consequat dis arcu. Pellentesque mus tempor vitae pretium sodales porttitor lacus. Phasellus
-											egestas odio nisl duis sociis purus faucibus morbi. Eget massa mus etiam sociis pharetra magna.
-										</p>
-										<p>
-											Eleifend auctor turpis magnis sed porta nisl pretium. Aenean suspendisse nulla eget sed etiam parturient
-											orci cursus nibh. Quisque eu nec neque felis laoreet diam morbi egestas. Dignissim cras rutrum consectetur
-											ut penatibus fermentum nibh erat malesuada varius.
+											TE Mini Project Exhibition <br><br>
+											(Compulsary for TE)<br><br>
+
+											Total Rounds: 1<br><br>
+
+
+											<strong>Timings:</strong> 9 AM Onwards<br><br>
+
+											<strong>TEAM AND FEE STRUCTURE:</strong> <br><br>
+											Team size : Respective SDL Project Teams<br><br>											
+											Registration fee : Free<br><br>
+
+											Place: 202<br><br>
+
+											<strong>Coordinators:</strong> <br><br>
+											Vaigavi Iyer :  8600168843<br><br>
+											Ashitosh Dhapate : +918793915860<br><br>
+
 										</p>
 									</section>
 
