--- a/theatreart.html
+++ b/theatreart.html
@@ -83,7 +83,7 @@
 								-->
 								<section>
 									<header>
-										<h3><a href="#">Evevnts at a glance</a></h3>
+										<h3><a href="#">Events at a glance</a></h3>
 									</header>
 									<p>
 										<br>
@@ -241,23 +241,37 @@
 									</header>
 								<!--	<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a> -->
 									<p>
-										Event Description
+										
+										<strong>Objective:</strong> To create awareness about side effects of  social media and online games on today's youth.
+
 									</p>
 									<section>
 										<header>
 											<h3>Rules</h3>
 										</header>
 										<p>
-											Nascetur volutpat nibh ullamcorper vivamus at purus. Cursus ultrices porttitor sollicitudin imperdiet
-											at pretium tellus in euismod a integer sodales neque. Nibh quis dui quis mattis eget imperdiet venenatis
-											feugiat. Neque primis ligula cum erat aenean tristique luctus risus ipsum praesent iaculis. Fermentum elit
-											fringilla consequat dis arcu. Pellentesque mus tempor vitae pretium sodales porttitor lacus. Phasellus
-											egestas odio nisl duis sociis purus faucibus morbi. Eget massa mus etiam sociis pharetra magna.
-										</p>
-										<p>
-											Eleifend auctor turpis magnis sed porta nisl pretium. Aenean suspendisse nulla eget sed etiam parturient
-											orci cursus nibh. Quisque eu nec neque felis laoreet diam morbi egestas. Dignissim cras rutrum consectetur
-											ut penatibus fermentum nibh erat malesuada varius.
+											(Organised by  Art Circle)<br><br>
+
+											•	Movie duration: max 10 mins<br>
+											•	80-90% of the film should be self shooted<br>
+											•	Presentation (details of the movie shooting) is expected on the day of event.<br><br>
+
+											<strong>Theme:</strong> Side effects of online gaming and social media<br><br>
+
+											Total Rounds: 1<br><br>
+
+											<strong>Timings:</strong> 9:30 AM.<br><br>
+
+											<strong>TEAM AND FEE STRUCTURE: </strong><br><br>
+											Team size:  3<br><br>
+											Registration fee: ₹50/Team<br><br>
+
+											Place: 203.<br><br>
+
+											<strong>Coordinators:</strong> <br><br>
+											Amita Nilawar 9764333715<br><br>
+											Aniket Wakde 7385687929<br><br>
+
 										</p>
 									</section>
 
