--- a/beatthebits.html
+++ b/beatthebits.html
@@ -83,7 +83,7 @@
 								-->
 								<section>
 									<header>
-										<h3><a href="#">Evevnts at a glance</a></h3>
+										<h3><a href="#">Events at a glance</a></h3>
 									</header>
 									<p>
 										<br>
@@ -241,23 +241,34 @@
 									</header>
 								<!--	<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a> -->
 									<p>
-										Event Description
+										<strong>Objective:</strong> To enhance the competitive Coding skills of the participants and prove to be useful for their self analysis; as for them to see how good coders they are.
 									</p>
 									<section>
 										<header>
 											<h3>Rules</h3>
 										</header>
 										<p>
-											Nascetur volutpat nibh ullamcorper vivamus at purus. Cursus ultrices porttitor sollicitudin imperdiet
-											at pretium tellus in euismod a integer sodales neque. Nibh quis dui quis mattis eget imperdiet venenatis
-											feugiat. Neque primis ligula cum erat aenean tristique luctus risus ipsum praesent iaculis. Fermentum elit
-											fringilla consequat dis arcu. Pellentesque mus tempor vitae pretium sodales porttitor lacus. Phasellus
-											egestas odio nisl duis sociis purus faucibus morbi. Eget massa mus etiam sociis pharetra magna.
-										</p>
-										<p>
-											Eleifend auctor turpis magnis sed porta nisl pretium. Aenean suspendisse nulla eget sed etiam parturient
-											orci cursus nibh. Quisque eu nec neque felis laoreet diam morbi egestas. Dignissim cras rutrum consectetur
-											ut penatibus fermentum nibh erat malesuada varius.
+											(Competitive Coding Event) <br><br>
+											Compulsory for: SE,PG(1st year)<br><br>
+
+											Total Rounds: 3<br><br>
+
+
+											<strong>Timings: </strong><br><br>
+											ROUND 1 - > 8:30 - 9:30  -> Top 60 will advance to round 2<br><br>
+											ROUND 2 - >9:30 - 10:30 -> Top 25 will advance to round 3<br><br>
+											ROUND 3 - >1:30 - 3:00 ->Top 2 will be declared winner and runner-up <br><br>
+
+											<strong>TEAM AND FEE STRUCTURE:</strong> <br><br>
+											Team size : Individual <br><br>
+											Registration fee : 30₹.<br><br>
+
+											Place: 112, 212, Old CC Lab.<br><br>
+
+											<strong>Coordinators: </strong><br><br>
+											Mehul Solanki +91 98194 56322<br><br>
+											Aditya Khadse +91 94050 50462<br><br>
+
 										</p>
 									</section>
 
