--- a/dash.html
+++ b/dash.html
@@ -83,7 +83,7 @@
 								-->
 								<section>
 									<header>
-										<h3><a href="#">Evevnts at a glance</a></h3>
+										<h3><a href="#">Events at a glance</a></h3>
 									</header>
 									<p>
 										<br>
@@ -241,23 +241,33 @@
 									</header>
 								<!--	<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a> -->
 									<p>
-										Event Description
+											<strong>Objective: </strong>
+											Do you think you have the best team coordination? Why not prove it by completing and winning a series of fun games.
 									</p>
 									<section>
 										<header>
 											<h3>Rules</h3>
 										</header>
 										<p>
-											Nascetur volutpat nibh ullamcorper vivamus at purus. Cursus ultrices porttitor sollicitudin imperdiet
-											at pretium tellus in euismod a integer sodales neque. Nibh quis dui quis mattis eget imperdiet venenatis
-											feugiat. Neque primis ligula cum erat aenean tristique luctus risus ipsum praesent iaculis. Fermentum elit
-											fringilla consequat dis arcu. Pellentesque mus tempor vitae pretium sodales porttitor lacus. Phasellus
-											egestas odio nisl duis sociis purus faucibus morbi. Eget massa mus etiam sociis pharetra magna.
-										</p>
-										<p>
-											Eleifend auctor turpis magnis sed porta nisl pretium. Aenean suspendisse nulla eget sed etiam parturient
-											orci cursus nibh. Quisque eu nec neque felis laoreet diam morbi egestas. Dignissim cras rutrum consectetur
-											ut penatibus fermentum nibh erat malesuada varius.
+											(Organised by CPDC and Higher Studies Cell)<br><br>
+
+											•	Knockout based event.<br><br>
+
+											Total Rounds: Knockout based event<br><br>
+
+											<strong>Timings:</strong> 8.30 AM Onwards.<br><br>
+
+											<strong>TEAM AND FEE STRUCTURE: </strong><br><br>
+											Team size:  Group of 3<br><br>
+											Registration fee: ₹80/Team<br><br>
+
+											
+											Place: 101.<br><br>
+
+											<strong>Coordinators:</strong> <br><br>
+											Ashish Kulkarni 8600219106<br><br>
+											Dhanashree Jain 98229 32833<br><br>
+
 										</p>
 									</section>
 
