--- a/generic.html
+++ b/generic.html
@@ -83,7 +83,7 @@
 								-->
 								<section>
 									<header>
-										<h3><a href="#">Evevnts at a glance</a></h3>
+										<h3><a href="#">Events at a glance</a></h3>
 									</header>
 									<p>
 										<br>
