--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 										<li><a href="sih2017.html">Smart India Hackathon 2017 Exhibiton</a></li>
 									</ul>
 								</li>
-								<li><a href="media/schedule.pdf">Schedule</a></li>
+								<!--<li><a href="media/schedule.pdf">Schedule</a></li> -->
 							</ul>
 						</nav>
 
