--- a/quiz.html
+++ b/quiz.html
@@ -83,7 +83,7 @@
 								-->
 								<section>
 									<header>
-										<h3><a href="#">Evevnts at a glance</a></h3>
+										<h3><a href="#">Events at a glance</a></h3>
 									</header>
 									<p>
 										<br>
@@ -241,23 +241,39 @@
 									</header>
 								<!--	<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a> -->
 									<p>
-										Event Description
+										<strong>Objective:</strong> Quizzes come and go... But this time it’s different!!!
+											We bring you a Fusion of Coding and Puzzles
+											Stand out using your superpowers.
+											Join us at QUIZ-O-PHILE
+
 									</p>
 									<section>
 										<header>
 											<h3>Rules</h3>
 										</header>
 										<p>
-											Nascetur volutpat nibh ullamcorper vivamus at purus. Cursus ultrices porttitor sollicitudin imperdiet
-											at pretium tellus in euismod a integer sodales neque. Nibh quis dui quis mattis eget imperdiet venenatis
-											feugiat. Neque primis ligula cum erat aenean tristique luctus risus ipsum praesent iaculis. Fermentum elit
-											fringilla consequat dis arcu. Pellentesque mus tempor vitae pretium sodales porttitor lacus. Phasellus
-											egestas odio nisl duis sociis purus faucibus morbi. Eget massa mus etiam sociis pharetra magna.
-										</p>
-										<p>
-											Eleifend auctor turpis magnis sed porta nisl pretium. Aenean suspendisse nulla eget sed etiam parturient
-											orci cursus nibh. Quisque eu nec neque felis laoreet diam morbi egestas. Dignissim cras rutrum consectetur
-											ut penatibus fermentum nibh erat malesuada varius.
+											(Organised by PDC cell)<br><br>
+
+											• The participants will have to solve logical problems. <br>
+											• Problems can be based on mathematics and codes (finding mistake in a small piece of code).<br>
+											• Difficulty of each round will be increased.<br>
+											• Third round is a surprise round.<br><br>
+
+											Total Rounds: 3<br><br>
+
+											<strong>Timings:</strong> 9 AM onwards.<br><br>
+											
+
+											<strong>TEAM AND FEE STRUCTURE:</strong> <br><br>
+											Team size:  2 per team<br><br>
+											Registration fee: ₹ 50/Team<br><br>
+
+											Place: 203.<br><br>
+
+											<strong>Coordinators:</strong> <br><br>
+											Ashitosh Dhapate+918793915860<br><br>
+											Bharati Kulkarni :+917350330805<br><br>
+
 										</p>
 									</section>
 
