--- a/shotin90.html
+++ b/shotin90.html
@@ -83,7 +83,7 @@
 								-->
 								<section>
 									<header>
-										<h3><a href="#">Evevnts at a glance</a></h3>
+										<h3><a href="#">Events at a glance</a></h3>
 									</header>
 									<p>
 										<br>
@@ -237,27 +237,42 @@
 
 										<p>
 											
+
 										</p>
 									</header>
 								<!--	<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a> -->
 									<p>
-										Event Description
+										<strong>Objective:</strong> Got some really good convincing skills...?
+											Show of your talent by putting across a 90 second video illustrating your topic....
+											Here, at SHOT IN 90 	
 									</p>
 									<section>
 										<header>
 											<h3>Rules</h3>
 										</header>
 										<p>
-											Nascetur volutpat nibh ullamcorper vivamus at purus. Cursus ultrices porttitor sollicitudin imperdiet
-											at pretium tellus in euismod a integer sodales neque. Nibh quis dui quis mattis eget imperdiet venenatis
-											feugiat. Neque primis ligula cum erat aenean tristique luctus risus ipsum praesent iaculis. Fermentum elit
-											fringilla consequat dis arcu. Pellentesque mus tempor vitae pretium sodales porttitor lacus. Phasellus
-											egestas odio nisl duis sociis purus faucibus morbi. Eget massa mus etiam sociis pharetra magna.
-										</p>
-										<p>
-											Eleifend auctor turpis magnis sed porta nisl pretium. Aenean suspendisse nulla eget sed etiam parturient
-											orci cursus nibh. Quisque eu nec neque felis laoreet diam morbi egestas. Dignissim cras rutrum consectetur
-											ut penatibus fermentum nibh erat malesuada varius.
+											(Organised by PDC cell)<br><br>
+
+											•	Make a video explaining any technical concept.<br>
+											•	Maximum time limit for the video is 90 seconds.<br>
+											•	The person making the video needs to be in the video<br>
+											•	Use of Animations is allowed.<br>
+											•	Content must be original and not copied. Copied content or use of voice-overs may result is disqualification.<br>
+											•	Video needs to be submitted 1hr prior to the event or can be mailed at pccoeacm@gmail.com<br><br>
+
+											Total Rounds: 1<br><br>
+
+											<strong>Timings:</strong> 9:30 AM.<br><br>
+
+											<strong>TEAM AND FEE STRUCTURE:</strong> <br><br>
+											Team size:  Individual<br><br>
+											Registration fee: ₹30<br><br>
+
+
+											<strong>Coordinators: </strong><br><br>
+											Ashitosh Dhapate+918793915860<br><br>
+											Bharati Kulkarni :+917350330805<br><br>
+
 										</p>
 									</section>
 
