--- a/sih2017.html
+++ b/sih2017.html
@@ -83,7 +83,7 @@
 								-->
 								<section>
 									<header>
-										<h3><a href="#">Evevnts at a glance</a></h3>
+										<h3><a href="#">Events at a glance</a></h3>
 									</header>
 									<p>
 										<br>
@@ -241,23 +241,28 @@
 									</header>
 								<!--	<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a> -->
 									<p>
-										Event Description
+										
+										<strong>Objective:</strong> To provide a platform for the teams who participated in Smart India Hackathon to showcase and implement their ideas therein.
+
 									</p>
 									<section>
 										<header>
 											<h3>Rules</h3>
 										</header>
 										<p>
-											Nascetur volutpat nibh ullamcorper vivamus at purus. Cursus ultrices porttitor sollicitudin imperdiet
-											at pretium tellus in euismod a integer sodales neque. Nibh quis dui quis mattis eget imperdiet venenatis
-											feugiat. Neque primis ligula cum erat aenean tristique luctus risus ipsum praesent iaculis. Fermentum elit
-											fringilla consequat dis arcu. Pellentesque mus tempor vitae pretium sodales porttitor lacus. Phasellus
-											egestas odio nisl duis sociis purus faucibus morbi. Eget massa mus etiam sociis pharetra magna.
-										</p>
-										<p>
-											Eleifend auctor turpis magnis sed porta nisl pretium. Aenean suspendisse nulla eget sed etiam parturient
-											orci cursus nibh. Quisque eu nec neque felis laoreet diam morbi egestas. Dignissim cras rutrum consectetur
-											ut penatibus fermentum nibh erat malesuada varius.
+											(Compulsory for teams who participated for Smart India Hackathon in 2017)<br><br>
+
+										Total Rounds: 1<br><br>
+
+										<strong>Timings:</strong> 1:30 PM.<br><br>
+
+
+										Place: 210.<br><br>
+
+										<strong>TEAM AND FEE STRUCTURE:</strong> <br><br>
+										Team size : Respective team of Smart India Hackathon<br><br><br><br>
+										Registration fee : Free<br><br>
+
 										</p>
 									</section>
 
