--- a/speakout.html
+++ b/speakout.html
@@ -83,7 +83,7 @@
 								-->
 								<section>
 									<header>
-										<h3><a href="#">Evevnts at a glance</a></h3>
+										<h3><a href="#">Events at a glance</a></h3>
 									</header>
 									<p>
 										<br>
@@ -241,23 +241,37 @@
 									</header>
 								<!--	<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a> -->
 									<p>
-										Event Description
+										<strong>Objective: </strong>
+										Do you feel like you have plenty of interesting stuff to share, plenty of imagination and good narrative skills but need a platform? Well, your search ends here 
+
 									</p>
 									<section>
 										<header>
 											<h3>Rules</h3>
 										</header>
 										<p>
-											Nascetur volutpat nibh ullamcorper vivamus at purus. Cursus ultrices porttitor sollicitudin imperdiet
-											at pretium tellus in euismod a integer sodales neque. Nibh quis dui quis mattis eget imperdiet venenatis
-											feugiat. Neque primis ligula cum erat aenean tristique luctus risus ipsum praesent iaculis. Fermentum elit
-											fringilla consequat dis arcu. Pellentesque mus tempor vitae pretium sodales porttitor lacus. Phasellus
-											egestas odio nisl duis sociis purus faucibus morbi. Eget massa mus etiam sociis pharetra magna.
-										</p>
-										<p>
-											Eleifend auctor turpis magnis sed porta nisl pretium. Aenean suspendisse nulla eget sed etiam parturient
-											orci cursus nibh. Quisque eu nec neque felis laoreet diam morbi egestas. Dignissim cras rutrum consectetur
-											ut penatibus fermentum nibh erat malesuada varius.
+											(Organised by CPDC and Higher Studies Cell)<br><br>
+
+											1st round: Students speak on any topic. (Time: 2 minutes)<br>
+											2nd round: Students are asked to talk on a random image that will be shown. (30 seconds to think on a given image;1.30 minutes for speaking)<br>
+											3rd round: Students would be given a topic and they have to speak about it spontaneously. (Time : 1 minute)<br><br>
+
+											Total Rounds: 3<br><br>
+
+											<strong>Timings:</strong> 1 PM Onwards<br><br>
+											
+
+											<strong>TEAM AND FEE STRUCTURE:</strong> <br><br>
+											Team size:  Individual<br><br>
+											Registration fee: ₹50<br><br>
+
+
+											Place: 111.<br><br>
+
+											<strong>Coordinators:</strong> <br><br>
+											Ashish Kulkarni 8600219106<br><br>
+											Dhanashree Jain 98229 32833<br><br>
+
 										</p>
 									</section>
 
