Minor Changes, corrected BE Paper to BE Poster

--- a/beatthebits.html
+++ b/beatthebits.html
@@ -1,5 +1,5 @@
-<!DOCTYPE HTML>
 
+<!DOCTYPE HTML>
 
 <html>
 	<head>
@@ -113,10 +113,10 @@
 									</div>
 									<div class="row 50%">
 										<div class="4u">
-											<a href="bepaper.html" class="image fit"><img src="images/bepaper.jpg" alt="" /></a>
+											<a href="beposter.html" class="image fit"><img src="images/beposter.jpg" alt="" /></a>
 										</div>
 										<div class="8u">
-											<h4><a href="bepaper.html">BE Paper Presentation</a></h4>
+											<h4><a href="beposter.html">BE Poster Presentation</a></h4>
 											<p>
 												Present you paper in pragmatic manner
 											</p>
