--- a/beposter.html
+++ b/beposter.html
@@ -1,6 +1,5 @@
 <!DOCTYPE HTML>
 
-
 <html>
 	<head>
 		<title>Anantya 2k17</title>
@@ -19,7 +18,7 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1><a href="#" id="logo">BE Paper Presentation</a></h1>
+								<h1><a href="#" id="logo">BE Poster Presentation</a></h1>
 							</header>
 						</div>
 
@@ -113,10 +112,10 @@
 									</div>
 									<div class="row 50%">
 										<div class="4u">
-											<a href="bepaper.html" class="image fit"><img src="images/bepaper.jpg" alt="" /></a>
+											<a href="beposter.html" class="image fit"><img src="images/beposter.jpg" alt="" /></a>
 										</div>
 										<div class="8u">
-											<h4><a href="bepaper.html">BE Paper Presentation</a></h4>
+											<h4><a href="beposter.html">BE Poster Presentation</a></h4>
 											<p>
 												Present you paper in pragmatic manner
 											</p>
