--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<img src='images/anantya-logo.png' width='400px' height='100px'>
+								<img src='images/anantya-logo.png' width='200px' height='50px'>
 								<hr />
 							</header>
 							<footer>
@@ -90,11 +90,11 @@
 						</article>
 
 						<article>
-							<a href="bepaper.html" class="image featured"><img src="images/bepaper.jpg" alt="" /></a>
+							<a href="beposter.html" class="image featured"><img src="images/beposter.jpg" alt="" /></a>
 							<header>
-								<h3><a href="bepaper.html">BE Paper Presentation</a></h3>
+								<h3><a href="bepaper.html">BE Poster Presentation</a></h3>
 							</header>
-							<p>Present your paper in a pragmatic manner</p>
+							<p>Present your poster in a pragmatic manner</p>
 						</article>
 
 						<article>
